--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,13 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: Tahoma, Verdana, sans-serif;
+    font-family: "Century Gothic", CenturyGothic, sans-serif;
+    max-width: 100vw;
+}
+
+.header,
+.footer {
+    background-color: white;
 }
 
 .header {
@@ -9,10 +15,72 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 10px;
-    background-color:rgba(0, 0, 0, 0.7);
-    color: white;
+    color: hotpink;
     font-style: bold;
     font-size: 20px;
+}
+
+.headerRight {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.toggle {
+    list-style-type: none;
+    display: flex;
+    gap: 10px;
+    font-size: 15px;
+    color: grey;
+}
+
+.showAll,
+.showActive,
+.showComplete {
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.showAll:hover,
+.showActive:hover,
+.showComplete:hover {
+    color: black;
+}
+
+.currentShowSelection {
+    color: black;
+}
+
+/* add project button style */
+.BtnAddProject {
+    border-radius: 15px;
+    padding: 10px 10px;
+    background-color: rgba(251, 225, 81, 0.6);
+    color:rgb(66, 66, 66);
+    box-shadow: 0 3px 8px 0.5px rgba(0, 0, 0, 0.2);
+    border-style: none;
+    font-size: 15px;
+    transition: all 0.3s;
+    cursor: pointer; 
+}
+
+.BtnAddProject:hover {
+    background-color: rgba(211, 211, 211, 0.6);
+    color:rgba(66, 66, 66, 0.5);   
+}
+
+/* footer section */
+.footer {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer a {
+    text-decoration: none;
+    color: hotpink;
 }
 
 #content {
@@ -27,15 +95,18 @@ body {
 }
 
 .left {
+    flex-shrink: 0;
     width: 200px;
-    background-image: linear-gradient(to bottom, rgba(252, 241, 241, 0.708), #FEDFE1);
+    background-color: white;
     padding: 20px;
+    color: hotpink;
 }
 
 .right {
     flex: 1;
     display: flex;
     flex-direction: column;
+    background-color: white;
 }
 
 .right .top, 
@@ -43,57 +114,127 @@ body {
     padding: 20px;
 }
 
+
 .right .top {
-    height: 200px;
-    background-image: linear-gradient(to bottom, #BDC0BA, rgba(189, 192, 186, 0.6));
-    margin: 20px;
-    box-shadow: 0 5px 8px 1px rgba(0, 0, 0, 0.4);
+    height: auto;
+    background-color: white;
+    margin: 20px 20px 0 20px;
+    box-shadow: 0 3px 8px 0.5px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    display: flex;
 }
+
+.right .topLeft {
+    flex-shrink: 0;
+    width: 500px;
+}
+
+.right .topRight {
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 20px;
+}
+
+.topRightTop {
+    flex: 1;
+    display: flex;
+}
+
+
+.topRightBottom {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.delete {
+    align-self: flex-end;
+}
+
+
+.topRightBottom p {
+    text-align: center;
+    margin: 0;
+}
+
+.priorityDisplay,
+.statusDisplay {
+    padding: 2px 5px;
+    border-radius: 20px;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: rgba(211, 211, 211, 0.7);
+    font-size: 8px;
+    color: rgb(49, 49, 49);
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.statusDisplayDone {
+    background-color: rgba(251, 225, 81, 0.6);
+}
+
 
 .right .bottom {
     flex: 1;
+    gap: 40px;
 }
-
-
-/* footer section */
-.footer {
-    background-color:rgba(0, 0, 0, 0.7);
-    color: white;
-    padding-bottom: 10px;
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer a {
-    text-decoration: none;
-    color: grey;
-}
-
 
 /* todo style */
-.TODO_title p,
-.TODO_title input {
+.TODO_title span,
+.TODO_description span,
+.TODO_dueDate input {
+    border-style: none;
+    outline: none;
+    background-color: transparent;
+    margin: 0;
+    font-family: "Century Gothic", CenturyGothic, sans-serif;
+    /* so margin can be applied for span elements */
+    display: block; 
+}
+
+.TODO_title span {
     font-size: 40px;
-    margin: 0 0 20px 0;
-    padding: 0;
-    background-color: transparent;
-    font-family: monospace;
-}
-
-.TODO_description p,
-.TODO_description input {
-    color: rgb(49, 49, 49);
-    margin: 0 0 20px 0;
-    padding: 0;
-    background-color: transparent;
-    font-family: monospace;
-}
-
-.TODO_dueDate {
-    color: rgb(255, 66, 161);
     margin-bottom: 20px;
+    padding: 0;
+    color: hotpink;
+}
+
+
+.TODO_description span {
+    color: rgb(49, 49, 49);
+    padding: 0;
+    margin-bottom: 20px;
+    background-color: transparent;
+    font-size: 15px;
+}
+
+
+
+.TODO_dueDate input {
+    color: rgb(255, 66, 161);
+    text-align: end;
+    font-size: 18px;
+    padding: 0;
+}
+
+
+.TODO_dueDateErrorMessage {
+    text-align: end;
+    color: grey;
+    opacity: 0.8;
+    font-size: 10px;
+    margin: 0;
+}
+
+.dueDateErrorMessage_hide {
+    opacity: 0;   
+}
+
+.error {
+    text-decoration: underline;  
 }
 
 .TODO_priority {
@@ -101,25 +242,41 @@ body {
     margin-bottom: 20px;
 }
 
-/* add project button style */
-.BtnAddProject {
-    border-radius: 15px;
-    padding: 5px 10px;
-    background-color: pink;
-    color:rgb(66, 66, 66);
-    border-color: grey;
-    font-size: 15px;
-    transition: all 0.3s;
-    cursor: pointer; 
+.TODO_status {
+    color: red;
+    margin-bottom: 20px;
 }
 
-.BtnAddProject:hover {
-    background-color: lightgrey;
-    color:rgba(66, 66, 66, 0.5);   
+
+.status,
+.deleteTODO,
+.priority {
+    flex: 1;
 }
+
+.priorityBtn,
+.statusBtn,
+.deleteBtn {
+    cursor: pointer;
+}
+
+.priorityDefault {
+    background-color: transparent;
+}
+
+.priorityMedium {
+    background-color: pink;
+}
+
+.priorityHigh {
+    background-color: hotpink;
+}
+
 
 .currentTODO {
-    background-color: rgba(255, 192, 203, 0.5);
+    background-color:  rgba(211, 211, 211, 0.6);
+    border-radius: 10px;
+    color: black;
 }
 
 
@@ -152,10 +309,18 @@ body {
     margin-top: 5px;
     transition: all 0.2s;
     cursor: pointer; 
+
+    /* credit: https://stackoverflow.com/questions/3922739/limit-text-length-to-n-lines-using-css */
+    overflow: hidden;
+    overflow-wrap: anywhere;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+    -webkit-box-orient: vertical;
 }
 
 .TODO_display:hover {
-    color: hotpink;
+    color: pink;
 }
 
 
@@ -172,6 +337,7 @@ body {
 
 .addTODO:hover {
     opacity: 1.0;
+
 }
 
 .addTODO_btn {
@@ -179,17 +345,12 @@ body {
     border-radius: 10px;
     background-color: rgb(250, 250, 250);
     border-color: grey;
-    border-width: 1px;
+    border-style: none;
+    box-shadow: 0 3px 8px 0.5px rgba(0, 0, 0, 0.2);
     font-size: 10px;
     cursor: pointer; 
 }
 
-.addTODO_text {
-    color: grey;
-    font-size: 15px;
-    padding: 0;
-    margin: 0;
-}
 
 /* project content style */
 .right .container {
@@ -201,7 +362,7 @@ body {
 
 .TODOCard {
     flex: 0 0 auto;
-    background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.5), rgba(128, 128, 128, 0.3));
+    background-color: white;
     width: 200px;
     height: 200px;
     display: flex;
@@ -209,17 +370,27 @@ body {
     padding: 20px;
     cursor: pointer; 
     transition: all 0.3s;
-    box-shadow: 0 5px 8px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 3px 8px 0.5px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
 }
 
 .TODOCard:hover {
-    background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.8), rgba(128, 128, 128, 0.6));
+    background-color: rgba(251, 225, 81, 0.6);
 }
 
 .card_title p {
     margin: 0;
     font-size: 25px;
     margin-bottom: 10px;
+    color: hotpink;
+    
+    /* credit: https://stackoverflow.com/questions/3922739/limit-text-length-to-n-lines-using-css */
+    overflow: hidden;
+    overflow-wrap: anywhere;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* number of lines to show */
+    -webkit-box-orient: vertical;
 
 }
 
@@ -233,29 +404,136 @@ body {
     color: rgb(75, 75, 75);
 }
 
-.card_priority {
-    color: rgb(75, 75, 75);
+.card_priorityDefault {
+    background-color: white;
 }
+
+.card_priorityMedium {
+    background-color: rgba(255, 192, 203, 0.3);
+}
+
+.card_priorityHigh {
+    background-color: rgba(255, 105, 180, 0.3);
+}
+
+
+.card_status {
+    margin-top: 10px;
+    color: hotpink;
+}
+
 
 .addTODOCard {
     flex: 0 0 auto;
-    background-image: linear-gradient(to bottom, rgba(128, 128, 128, 0.2), rgba(128, 128, 128, 0.1));
+    background-color: rgba(211, 211, 211, 0.6);
     width: 200px;
     height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 20px;
     gap: 20px;
+    opacity: 0.5;
+    transition: all 0.3s;
 }
 
 .addTODOCard .addTODO_btn {
-    padding: 1px 12px;
-    background-color: rgba(250, 250, 250, 0.6);
+    padding: 1px 9px;
     border-color: grey;
     border-style: none;
     border-radius: 25px;
     font-size: 25px;
+    transition: all 0.3s;
+}
+
+.addTODOCard:hover {
+    opacity: 1.0;
+}
+
+.addTODOCard .addTODO_btn:hover {
+    background-color: rgba(251, 225, 81, 0.6);
+}
+
+
+
+.right .bottom {
+    display: flex;
+}
+
+.right .bottomLeft,
+.right .bottomRight {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.TODO_notesCards,
+.TODO_checklistCards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+
+.TODO_addNotes,
+.TODO_addChecklist {
+    color: lightgrey;
+    cursor: pointer;
+    transition: all 0.3s;
+    width: 200px;
+    margin: 0 0 10px 0;
+}
+
+.TODO_addNotes:hover,
+.TODO_addChecklist:hover,
+.TODO_checklistCard_addItem:hover {
+    color: black;
+}
+
+
+.TODO_notesCard,
+.TODO_checklistCard {
+    flex: 0 0 auto;
+    background-color: white;
+    width: 200px;
+    min-height: 200px;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    cursor: pointer; 
+    transition: all 0.3s;
+    box-shadow: 0 3px 8px 0.5px rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    margin: 0;
+
+    border-style: none;
+    outline: none;
+    background-color: transparent;
+}
+
+
+.TODO_checklistCard_addItem {
+    margin: 0 0 15px 0;
+    color: lightgrey;
+    transition: all 0.3s;
+}
+
+.TODO_checklistCard_checklistItemGroup {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.TODO_checklistCard_checklistItemGroup input {
+    margin: 0;
+    margin-top: 6px;
+}
+
+.TODO_checklistCard_checklistItem {
+    margin: 0;
+    border-style: none;
+    outline: none;
+    background-color: transparent;
 }
