--- a/src/style.css
+++ b/src/style.css
@@ -293,6 +293,11 @@ body {
     cursor: pointer; 
 }
 
+.PROJECT_display_text_current {
+    font-weight: bold;
+}
+
+
 .PROJECT_display_text:hover {
     color: hotpink;
 }
@@ -354,11 +359,52 @@ body {
 
 /* project content style */
 .right .container {
+    flex: 1;
     padding: 20px;
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+    align-content: flex-start;
 }
+
+.PROJECT_functionButton_container {
+    height: 120px;
+    flex-shrink: 0;
+    padding: 30px 20px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.PROJECT_functionButton {
+    width: 40px;
+    padding: 15px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 3px 8px 0.5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    background-color: lightgrey;
+    border-style: none;
+    border-radius: 25px;
+    transition: all 0.3s;
+    gap: 10px;
+}
+
+.PROJECT_functionButton img {
+    margin: 5px;
+    width: 20px;
+    height: auto;
+    transition: all 0.3s;
+}
+
+.PROJECT_functionButton:hover {
+    padding: 25px 15px;
+}
+
+
+
 
 .TODOCard {
     flex: 0 0 auto;
